Themes and decimal added
Added a theme button and a decimal button, polished code

--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
             </div>
             <div class="buttons">
                 <div class="rowTwo">
-                    <button class="Clear">AC</button>
+                    <button id="Clear">AC</button>
                     <button id="Equals">=</button>
                     <button class="Theme">
-                    s
+                        <img class="theme-image" src="images/darkmode.png" alt="" width="30px" height="auto">
                     </button>
-                    <a href="https://github.com/relited">
-                        <button id="Github">
-                            <img src="images/github.ico" width="160px" alt="github">
-                        </button>
-                    </a>
+                    <button id="Github">
+                        <a class="gitLink" href="https://github.com/relited"></a>
+                        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/icons/3231236/logo-github-icon-md.png" width="50px" alt="github">
+                    </button>
                 </div>
                 <div class="rowThree">
                     <button class="seven">7</button>
